# g0dhead_

./: .env.example  .gitattributes  .gitignore  BUILD.md  Cargo.toml
crates/godhead-audit/: Cargo.toml
crates/godhead-audit/src/: lib.rs
crates/godhead-audit/tests/: d_commitment.rs  e05_audit.rs
crates/godhead-collector/: Cargo.toml
crates/godhead-collector/src/: lib.rs
crates/godhead-collector/tests/: j_collector.rs
crates/godhead-concordat/: Cargo.toml
crates/godhead-concordat/src/: bias.rs  lib.rs  lint.rs
crates/godhead-concordat/tests/: e05_concordat.rs  k_concordat.rs
crates/godhead-deacon/: Cargo.toml
crates/godhead-deacon/src/: lib.rs
crates/godhead-deacon/tests/: i_deacon.rs  j_floor.rs
crates/godhead-intake/: Cargo.toml
crates/godhead-intake/src/: classify.rs  dispatch.rs  lib.rs  normalize.rs  pipe.rs  supervise.rs
crates/godhead-intake/tests/: n_intake.rs
crates/godhead-ml/: Cargo.toml
crates/godhead-ml/src/: aggregate.rs  lexical.rs  lib.rs  rebalance.rs  roster.rs  slave.rs
crates/godhead-ml/tests/: e05_ml.rs  m_ml.rs
crates/godhead-notary/: Cargo.toml
crates/godhead-notary/src/: lib.rs
crates/godhead-notary/tests/: c_sovereignty.rs  e05_notary.rs
crates/godhead-schemas/: Cargo.toml
crates/godhead-schemas/src/: chain.rs  clauses.rs  config.rs  envelope.rs  environment.rs  error.rs  flag.rs  instruction.rs  job.rs  lease.rs  lib.rs  log.rs  macros.rs  mandate.rs  manifest_profiles.rs  matrix.rs  ml.rs  node.rs  refusal.rs  registry.rs  sovereignty.rs  student.rs  threshold.rs
crates/godhead-scriptorium/: Cargo.toml
crates/godhead-scriptorium/src/: lib.rs
crates/godhead-scriptorium/tests/: e05_scriptorium.rs  g_scriptoria.rs
crates/godhead-store/: Cargo.toml
crates/godhead-store/examples/: db_probe.rs
crates/godhead-store/migrations/: 0001_slice1.sql  0002_nodes.sql  0003_sovereignty.sql  0004_ml.sql  0005_commitment.sql  0006_hardening.sql  0007_scriptoria.sql  0008_scriptoria_hardening.sql  0009_concordat.sql  0010_returns.sql  0011_returns_hardening.sql  0012_returns_immutability.sql  0013_jfloor.sql  0014_threshold.sql  0015_actor_class.sql  0016_threshold_events.sql  0017_canon_sources.sql  0018_v4_closure.sql  0019_doctor.sql
crates/godhead-store/src/: error.rs  interface.rs  lib.rs  postgres.rs  secrets.rs  types.rs
crates/godhead-store/tests/: a_lifecycle.rs  arch_walls.rs  b_handoff.rs  e05_riders.rs  e_refusal.rs  h_commons.rs  j_doctor.rs
crates/godhead-store/tests/common/: mod.rs
crates/godhead-student/: Cargo.toml
crates/godhead-student/src/: lib.rs  refine.rs  returns.rs  steward.rs
crates/godhead-student/tests/: l_student.rs
crates/godhead-toolcall/: Cargo.toml
crates/godhead-toolcall/src/: ladder.rs  lib.rs
crates/godhead-toolcall/tests/: e05_toolcall.rs  f_toolcall.rs
docs/: .env  00_read_before_development.md  01_scope_and_philosophy.md  02_onboard_pipe.md  03_intraserver_and_persistence_pipe.md  04_ml_pipe.md  05_central_dogma.md  06_holy_standard.md  07_student_handbook.md  08_phase_b_success_criteria.md
docs/_history/: 05_central_dogma.md  06_holy_standard.md  07_student_handbook.md  PROVENANCE.md
docs/dev/: ADR_2_SPACE_TRIAL_SUBSTRATE.md  ADR_3_AUTHORITY_SUBSTRATE.md  AMENDMENT_MATRIX.md  AUTHORITY_REGISTRIES.md  CRITERIA_SWEEP.md  DISCIPLINE.md  GATE_REPORT.txt  OVERRIDE_LINEAGES.md  PASS_7_COMMISSION.md  PROMPT_G_RULINGS.md  REVIEW_LEDGER.md  ROADMAP_RECONCILIATION.md  ROUND_2_VERIFICATION_REPORT.md  SLICE_01.md  SLICE_02.md  SLICE_03.md  SLICE_04.md  SLICE_05.md  SLICE_06.md  SLICE_07.md  SLICE_08.md  SLICE_09.md  SLICE_10.md  SLICE_11.md  SLICE_11B.md  SPACE_PROMOTION_AND_EPOCHS.md  TRIAL_AND_EVIDENCE.md  criteria_sweep.py
scripts/: gate_report.py
