[workspace]
resolver = "2"
members = [
    "crates/godhead-schemas",
    "crates/godhead-store",
    "crates/godhead-intake",
    "crates/godhead-notary",
    "crates/godhead-ml",
    "crates/godhead-audit",
    "crates/godhead-toolcall",
    "crates/godhead-scriptorium",
    "crates/godhead-concordat",
    "crates/godhead-student",
    "crates/godhead-deacon",
]

[workspace.package]
edition = "2021"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v5", "v7", "serde"] }
semver = { version = "1", features = ["serde"] }
thiserror = "2"
time = { version = "0.3", features = ["serde", "parsing", "formatting"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
regex = "1"
sha2 = "0.10"
pgvector = { version = "0.4", features = ["sqlx"] }
async-trait = "0.1"
futures = "0.3"
serial_test = "3"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
