[package]
name = "godhead-audit"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
godhead-schemas = { path = "../godhead-schemas" }
godhead-store = { path = "../godhead-store" }
serde_json.workspace = true
uuid.workspace = true
semver.workspace = true
thiserror.workspace = true

[dev-dependencies]
godhead-intake = { path = "../godhead-intake" }
godhead-ml = { path = "../godhead-ml" }
godhead-notary = { path = "../godhead-notary" }
tokio.workspace = true
sqlx.workspace = true

[lints]
workspace = true
