[package]
name = "godhead-collector"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
godhead-schemas = { path = "../godhead-schemas" }
godhead-store = { path = "../godhead-store" }
semver.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
godhead-scriptorium = { path = "../godhead-scriptorium" }
godhead-intake = { path = "../godhead-intake" }
tokio.workspace = true
semver.workspace = true
sqlx.workspace = true
time.workspace = true

[lints]
workspace = true
