[package]
name = "godhead-deacon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
godhead-schemas = { path = "../godhead-schemas" }
godhead-store = { path = "../godhead-store" }
godhead-intake = { path = "../godhead-intake" }
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
godhead-scriptorium = { path = "../godhead-scriptorium" }
tokio.workspace = true
semver.workspace = true
sqlx.workspace = true
time.workspace = true

[lints]
workspace = true
