[package]
name = "godhead-schemas"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
semver.workspace = true
thiserror.workspace = true
time.workspace = true

[lints]
workspace = true
