[package]
name = "godhead-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
godhead-schemas = { path = "../godhead-schemas" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
semver.workspace = true
thiserror.workspace = true
time.workspace = true
sqlx.workspace = true
tokio.workspace = true
regex.workspace = true

[lints]
workspace = true
